--- a/package.json
+++ b/package.json
@@ -5,18 +5,24 @@
   "version": "0.1.0",
   "author": "Mike Daugherty <mikedaugherty@msdwebsolutions.com",
   "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^1.2.32",
+    "@fortawesome/free-solid-svg-icons": "^5.15.1",
+    "@fortawesome/react-fontawesome": "^0.1.13",
     "babel-plugin-styled-components": "^1.12.0",
     "framer-motion": "^2.9.4",
     "gatsby": "^2.26.1",
     "gatsby-image": "^2.6.0",
+    "gatsby-plugin-fontawesome-css": "^1.0.0",
     "gatsby-plugin-manifest": "^2.6.1",
     "gatsby-plugin-offline": "^3.4.0",
     "gatsby-plugin-react-helmet": "^3.4.0",
     "gatsby-plugin-sass": "^2.6.0",
     "gatsby-plugin-sharp": "^2.9.0",
     "gatsby-plugin-styled-components": "^3.5.0",
+    "gatsby-plugin-web-font-loader": "^1.0.4",
     "gatsby-source-filesystem": "^2.5.0",
     "gatsby-styled-components-dark-mode": "^1.3.0",
+    "gatsby-transformer-json": "^2.6.0",
     "gatsby-transformer-sharp": "^2.7.0",
     "node-sass": "^4.0.0",
     "prop-types": "^15.7.2",
